send move result to another client via RMI